--- a/.env
+++ b/.env
@@ -45,9 +45,13 @@ REACT_APP_ZXY_MULTICALL_ADDRESS="0xc32F798dB3F25c6251F85C47239a442e6B4FcdFe"
 # REACT_APP_BASE_URL="http://192.168.101.12:18081/"
 # REACT_APP_BASE_URL="https://swap.novaichain.com/"
 REACT_APP_BASE_URL="/"
+# nai 地址
+REACT_APP_NAI_HEYUE_ADDRESS= "0xb96B7d6f62BA47f142ec9Ba4EF3C995ee8436A71"
+REACT_APP_NAI_ADDRESS= "0xFC864E04D1c05bFf255e8790aaEd5Fe8c1749ad7"
 
 
-# 测试
+
+# 测试 
 # 网络ID,chainid
 # REACT_APP_CHAIN_ID="7259"
 # # 网络主币名称
