--- a/.env.production
+++ b/.env.production
@@ -20,3 +20,6 @@ REACT_APP_ZXY_WETH_ADDRESS="0x4aC2abdDF928C3D01a208e880E101a1423dB6C73"
 REACT_APP_ZXY_MULTICALL_ADDRESS="0xc32F798dB3F25c6251F85C47239a442e6B4FcdFe"
 # # 请求域名配置（这里是正式）
 REACT_APP_BASE_URL=""
+# nai 地址
+REACT_APP_NAI_HEYUE_ADDRESS= "0xb96B7d6f62BA47f142ec9Ba4EF3C995ee8436A71"
+REACT_APP_NAI_ADDRESS= "0xFC864E04D1c05bFf255e8790aaEd5Fe8c1749ad7"
