--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "serve": "^11.3.0",
     "start-server-and-test": "^1.11.0",
     "styled-components": "^4.2.0",
-    "typescript": "^3.8.3"
+    "typescript": "3.8.3"
   },
   "resolutions": {
     "@walletconnect/web3-provider": "1.1.1-alpha.0"
@@ -112,8 +112,12 @@
     "yarn": "1.22.19"
   },
   "dependencies": {
-    "lightweight-charts": "^4.2.0",
-    "react-app-rewired": "^2.2.1"
+    "d3": "^7.9.0",
+    "dayjs": "^1.11.13",
+    "fancy-canvas": "^2.1.0",
+    "lightweight-charts": "4.1.1",
+    "react-app-rewired": "^2.2.1",
+    "uuid": "^11.1.0"
   },
   "proxy": "https://swap.novaichain.com/"
 }
