--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/rebass": "^4.0.5",
     "@types/styled-components": "^5.1.0",
     "@types/testing-library__cypress": "^5.0.5",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
     "@uniswap/default-token-list": "^1.3.1",
@@ -117,7 +118,7 @@
     "fancy-canvas": "^2.1.0",
     "lightweight-charts": "4.1.1",
     "react-app-rewired": "^2.2.1",
-    "uuid": "^11.1.0"
+    "uuid": "8"
   },
   "proxy": "https://swap.novaichain.com/"
 }
