--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
     "@reduxjs/toolkit": "^1.3.5",
+    "@types/highcharts": "^7.0.0",
     "@types/jest": "^25.2.1",
     "@types/lodash.flatmap": "^4.5.6",
     "@types/multicodec": "^1.0.0",
@@ -116,6 +117,8 @@
     "d3": "^7.9.0",
     "dayjs": "^1.11.13",
     "fancy-canvas": "^2.1.0",
+    "highcharts": "10.3.3",
+    "highcharts-react-official": "^3.2.1",
     "lightweight-charts": "4.1.1",
     "react-app-rewired": "^2.2.1",
     "uuid": "8"
