--- a/.env
+++ b/.env
@@ -50,6 +50,9 @@ REACT_APP_NAI_HEYUE_ADDRESS= "0xb96B7d6f62BA47f142ec9Ba4EF3C995ee8436A71"
 REACT_APP_NAI_ADDRESS= "0x53788c75206c3BD55b2304d627C1fF89dc58b02C"
 
 
+REACT_APP_TOKENARR_URL="v2"
+
+
 
 # 测试 
 # 网络ID,chainid
